--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="paired_devices">Paired devices</string>
     <string name="voice_control">Voice controller</string>
     <string name="input">Input:</string>
+    <string name="command">Command:</string>
 </resources>
